tests/pos/is-flow-typing-and.jo
union Option[T] = Some(value: T) | None

def testAndOperator: Int =
  val x: Option[Int] = Some(42)

  if x is Some(y) && y > 0 then
    y * 2
  else
    0

def main: Unit =
  println("result = " + testAndOperator)
